--- a/dev/scss/modules/button.scss
+++ b/dev/scss/modules/button.scss
@@ -7,10 +7,14 @@
     user-select: none;
     overflow: hidden;
     user-select: none;
-    word-wrap: wrap;
+    word-wrap: break-word;
 }
 
 .button_size_big {
+    padding: {
+        left: 5px;
+        right: 5px;
+    };
     font-family: Roboto Light;
     font-size: 20/16*1em;
     color: #ffffff;
@@ -18,21 +22,33 @@
     @media screen and (min-width: 768px) {
         $k: 0.6;
         width: $width*$k;
-        padding: $width*$k*28/229 0 $width*$k*28/229 0;
+        padding: {
+            top: $width*$k*28/229;
+            bottom: $width*$k*28/229;
+        };
     }
     @media screen and (min-width: 1024px) {
         $k: 0.8;
         width: $width*$k;
-        padding: $width*$k*28/229 0 $width*$k*28/229 0;
+        padding: {
+            top: $width*$k*28/229;
+            bottom: $width*$k*28/229;
+        };
     }
     @media screen and (min-width: 1440px) {
         width: $width;
-        padding: 28px 0 28px 0;
+        padding: {
+            top: 28px;
+            bottom: 28px;
+        };
     }
 
     $k: 0.4;
     width: $width*$k;
-    padding: $width*$k*28/229 0 $width*$k*28/229 0;
+    padding: {
+        top: $width*$k*28/229;
+        bottom: $width*$k*28/229;
+    };
     background-color: #9F449B;
     border-bottom: 4px solid #6B2E68;
     border-radius: 7px;
