--- a/dev/scss/modules/button.scss
+++ b/dev/scss/modules/button.scss
@@ -2,99 +2,47 @@
     box-sizing: border-box;
     outline: none;
     border: none;
-    text-align: center;
     cursor: pointer;
     user-select: none;
-    overflow: hidden;
-    user-select: none;
-    word-wrap: break-word;
 }
 
 .button_size_big {
     padding: {
-        left: 5px;
-        right: 5px;
+        left: 5px/$size*1rem;
+        right: 5px/$size*1rem;;
     };
     font-family: Roboto Light;
     font-size: 20/16*1em;
     color: #ffffff;
-    $width: 229px;
-    @media screen and (min-width: 768px) {
-        $k: 0.6;
-        width: $width*$k;
-        padding: {
-            top: $width*$k*28/229;
-            bottom: $width*$k*28/229;
-        };
-    }
-    @media screen and (min-width: 1024px) {
-        $k: 0.8;
-        width: $width*$k;
-        padding: {
-            top: $width*$k*28/229;
-            bottom: $width*$k*28/229;
-        };
-    }
-    @media screen and (min-width: 1440px) {
-        width: $width;
-        padding: {
-            top: 28px;
-            bottom: 28px;
-        };
-    }
-
-    $k: 0.4;
-    width: $width*$k;
+    width: 229px/$size*1rem;
     padding: {
-        top: $width*$k*28/229;
-        bottom: $width*$k*28/229;
+        top: 28px/$size*1rem;
+        bottom: 28px/$size*1rem;
     };
     background-color: #9F449B;
-    border-bottom: 4px solid #6B2E68;
-    border-radius: 7px;
-    border-bottom-left-radius: 7px 10px;
-    border-bottom-right-radius: 7px 10px;
+    border-bottom: .25rem solid #6B2E68;
+    border-radius: 7px/$size*1rem;
+    border-bottom-left-radius: 7px/$size*1rem 10px/$size*1rem;
+    border-bottom-right-radius: 7px/$size*1rem 10px/$size*1rem;
     &:active {
-        transform: translateY(4px);
+        transform: translateY(0.25rem);
         border-bottom-color: transparent;
     }
 }
 
 
 .button_size_small {
-    $width: 91px;
-    width: $width;
-    height: 39px;
+    width: 91px/$size*1rem;
     font-size: Helvetica Light;
     color: #000000;
-    border: 1px solid black;
-    border-radius: 8px;
-    font-size: 18 / 16 * 1rem;
+    border: 1px/$size*1rem solid black;
+    border-radius: 8px/$size*1rem;
+    font-size: 18px/$size*1rem;
     background-color: #ffffff;
-    @media screen and (min-width: 1440px) {
-        width: $width;
-        padding: 13px 0 13px 0;
-    }
-    @media screen and (min-width: 1024px) {
-        $k: 0.85;
-        width: $width*$k;
-        padding: $width*$k*13/229 0 $width*$k*13/229 0;
-    }
-    @media screen and (max-width: 768px) {
-        $k: 0.7;
-        width: $width*$k;
-        padding: $width*$k*13/229 0 $width*$k*13/229 0;
-    }
+    padding: 13px/$size*1rem 0 13px/$size*1rem 0;
     @media screen and (max-width: 425px) {
-        float: none;
-        clear: none;
-        margin: auto auto;
         display: block;
         margin-top: 50px;
-        font-size: 18/16*1.2em;
-        $k: 0.55;
-        width: $width*$k;
-        padding: $width*$k*28/229 0 $width*$k*28/229 0;
     }
 }
 
