--- a/dev/scss/modules/contact.scss
+++ b/dev/scss/modules/contact.scss
@@ -1,68 +1,26 @@
 .contact {
     background-color: #EEEEEE;
-    padding: 110px 341/2022*100% 60px 341/2022*100%;
-    box-sizing: content-box;
-    @media screen and (max-width: 768px){
-        padding: {
-            left: 341/2022*100% / 4;
-            right: 341/2022*100% / 4;
-        }
-    }
-    @media screen and (max-width: 1024px){
-        padding: {
-            left: 341/2022*100% / 2;
-            right: 341/2022*100% / 2;
-        }
-    }
+    padding-top: 110px;
+    padding-bottom: 60px;
     margin-top: 110px;
-    &:after {
-        content: ".";
-        visibility: hidden;
-        display	: block;
-        height: 0;
-        clear: both;
-    }
 }
 
 .contact__headline {
     margin-bottom: 209px;
 }
 
-.contact__send-email {
-    width: 527 / (2022 - 341 * 2) * 100%;
-    float: left;
-    @media screen and (max-width: 425px) {
-        float: none;
-        width: auto;
-        display: block;
-    }
+.contact__input {
+    margin-bottom: 36px;
 }
 
 
 .contact__paragraph {
-    width: 510 / (2022 - 341 * 2) * 100%;
-    font-size: 18px;
-    margin-top: -8px;
+    font-size: 18px/$size*1rem;
     margin-bottom: 53px;
-    flex-wrap: wrap;
-    float: right;
-    @media screen and (max-width: 425px) {
-        float: none;
-        width: calc(100% - 341/2022*100% / 4);
-        margin-top: 50px;
-    }
-
 }
 
-
 .contact__social {
-    display: flex;
-    justify-content: space-between;
-    width: 35%;
     align-items: center;
-    float: right;
-    clear: right;
-    margin-right: 3%;
     transition: all 0.5s ease-in-out;
     >a {
         display: block;
@@ -74,13 +32,4 @@
         &:hover {
         transform: scale(1.2, 1.2);
     }};
-    @media screen and (max-width: 425px) {
-        float: none;
-        margin: 0;
-        width: auto;
-        justify-content: space-around;
-         a {
-            width: 10%;
-        }
-    }
 }
