--- a/dev/scss/modules/my-skills.scss
+++ b/dev/scss/modules/my-skills.scss
@@ -1,54 +1,16 @@
 .my-skills {
     background-color: #EEEEEE;
-    @media screen and (min-width: 1024px) {
-        padding: {
-            left: 264/2022 * 100% / 2;
-            right: 264/2022 * 100% / 2;
+    padding: {
+            bottom: 201px;
+            top: 188px;
         }
-    };
-    @media screen and (min-width: 1440px) {
-        padding: {
-            left: 264/2022 * 100%;
-            right: 264/2022 * 100%;
-        }
-    };
-    @media screen and (min-width: 2560px) {
-        padding: {
-            left: 264/2022 * 100% * 1.5;
-            right: 264/2022 * 100% * 1.5;
-        }
-    };
-
- padding: {
-        bottom: 201px;
-        top: 188px;
-        left: 264/2022* 100% / 4;
-        right: 264/2022* 100% / 4;
-    }
 }
 
-.my-skills__values {
-    margin-top: 253px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    @media screen and (max-width: 425px) {
-        flex-direction: column;
-        align-items: center;
-    };
+.my-skills__headline {
+    margin-bottom: 253px;
 }
-.my-skills__value {
-    width: 403 / (2022 - 527 * 2) * 100%;
-    @media screen and (max-width: 425px) {
-        width: 100%;
-        margin-bottom: 80px;
-        &:last-child {
-            margin: 0
-        }
-    };
-}
-.my-skills__values>div+div+div {
-    margin-top: 54px
+.my-skills>section>div+div+div {
+    margin-top: 54px;
 }
 
 .my-skills__skill-name {
@@ -67,9 +29,6 @@
         font-size: 24/16*1rem;
         font-family: Helvetica Light;
         color: #777777;
-        @media screen and (max-width: 425px) {
-            font-size: 24/16*1.5rem;
-        };
     }
 }
 
