--- a/dev/scss/modules/section-logo.scss
+++ b/dev/scss/modules/section-logo.scss
@@ -1,25 +1,20 @@
 .section-logo {
-    max-width: 168px;
-    padding-top: 45px;
+    padding-top: 5%;
     box-sizing: border-box;
-    padding-bottom: 36px;
+    padding-bottom: 5%;
     border-radius: 20px;
     transition: all .5s ease-in-out;
     display: block;
     text-decoration: none;
-    @media screen and (max-width: 375px) {
-        padding-top: 25px;
-        padding-bottom: 16px;
-    }
 };
 
 .section-logo_focused{
     cursor: pointer;
     &:hover {
-    background-color:  #9F449B;
-    background-size: contain;
-    background-position: center;
-}
+        background-color:  #9F449B;
+        background-size: contain;
+        background-position: center;
+    }
 }
 
 .section-logo__headline {
@@ -27,17 +22,10 @@
     font-family: Roboto Light;
     font-weight: normal;
     font-size: 18/16*1rem;
-    @media screen and (max-width: 425px){
-        font-size: 18/16*3rem;
-    };
-    @media screen and (max-width: 768px){
-        font-size: 18/16*1.5rem;
-    };
-
     text-align: center;
 }
 .section-logo__icon {
     display: block;
     margin: auto auto;
-    margin-bottom: 23px;
+    margin-bottom: 1rem;
 }
