--- a/dev/scss/index.scss
+++ b/dev/scss/index.scss
@@ -3,15 +3,16 @@
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 $size: 16px;
 
 html {
-    font-size: 8px;
-    @media screen and (min-width: 425px) {
-        font-size: 10px;
-    }
-    @media screen and (min-width: 1024px) {
-        font-size: 12px;
+    font-size: 14px;
+    @media screen and (min-width: 1440px) {
+        font-size: 16px;
     }
     @media screen and (min-width: 2560px) {
         font-size: 22px;
