--- a/dev/scss/modules/portfolio-card.scss
+++ b/dev/scss/modules/portfolio-card.scss
@@ -1,4 +1,5 @@
 .portfolio-card {
+    text-decoration: none;
     overflow: hidden;
     cursor: pointer;
     transform-origin: center;
@@ -14,6 +15,8 @@
 .portfolio-card__banner {
     margin-bottom: 25px;
     margin-top: 31px;
+    box-sizing: border-box;
+    border: 1px solid rgb(223, 223, 223);
 }
 
 .portfolio-card__tag {
