--- a/dev/scss/modules/portfolio-card.scss
+++ b/dev/scss/modules/portfolio-card.scss
@@ -1,15 +1,10 @@
 .portfolio-card {
     text-decoration: none;
-    overflow: hidden;
     cursor: pointer;
     transform-origin: center;
-    transition: all .5s ease-in-out;
     > * {
         width: 100%;
     }
-    &:hover {
-       transform: translateY(2%);
-    };
 }
 
 .portfolio-card__banner {
@@ -17,6 +12,13 @@
     margin-top: 31px;
     box-sizing: border-box;
     border: 1px solid rgb(223, 223, 223);
+    transition: all .5s ease-in-out;
+    @media screen and (min-width: 1025px) {
+        &:hover {
+            transform: scale(170%);
+            box-shadow: 5px 5px 15px 1px rgb(117, 117, 117);
+         };
+    }
 }
 
 .portfolio-card__tag {
